fix (main) Correct spacing and clean up files

--- a/example.css
+++ b/example.css
@@ -17,12 +17,18 @@ body {
     position: relative;
     height: 100vh;
     font-weight: 400;
-    background-color: lightgray;
+    background-color: lightgreen;
 }
 
-.right { float: right; }
-.red { color: red !important; }
-.red-focus:focus { border: 1px solid red !important; }
+.right {
+  float: right;
+}
+.red {
+  color: red !important;
+}
+.red-focus:focus {
+ border: 1px solid red !important;
+}
 
 /**********************************************
 *** TOP PART
@@ -63,7 +69,7 @@ body {
 }
 
 .budgetIncome,
-.budget__expenses {
+.budgetExpenses {
     padding: 1em;
     text-transform: uppercase;
     border-radius: 1em;
@@ -75,12 +81,12 @@ body {
     background-color: forestgreen;
   }
 
-.budget__expenses {
+.budgetExpenses {
     background-color: red;
 }
 
 .budgetIncomeText,
-.budget__expenses--text {
+.budgetExpensesText {
     float: left;
     font-size: 1rem;
     color: #fff;
@@ -88,7 +94,7 @@ body {
 }
 
 .budgetIncomeValue,
-.budget__expenses--value {
+.budgetExpensesValue {
     letter-spacing: .03em;
     float: left;
     margin-top: .2em;
@@ -109,12 +115,12 @@ body {
     background-color: #f7f7f7;
 }
 
-.add__container {
+.addContainer {
     margin: 0 auto;
     text-align: center;
 }
 
-.add__type {
+.addType {
     width: 2em;
     border: 1px solid #e7e7e7;
     height: 2em;
@@ -126,8 +132,8 @@ body {
     transition: border 0.3s;
 }
 
-.add__description,
-.add__value {
+.addDescription,
+.addValue {
     border: 1px solid #e7e7e7;
     background-color: #fff;
     color: inherit;
@@ -139,10 +145,14 @@ body {
     transition: border 0.3s;
 }
 
-.add__description { width: 20em;}
-.add__value { width: 7em;}
+.addDescription {
+  width: 20em;
+}
+.addValue {
+  width: 7em;
+}
 
-.add__btn {
+.addBtn {
     font-size: 2rem;
     background: none;
     border: none;
@@ -154,27 +164,28 @@ body {
     margin-left: 0.1em;
 }
 
-.add__btn:active { transform: translateY(0.08em); }
+.addBtn:active { transform: translateY(0.08em); }
 
-.add__type:focus,
-.add__description:focus,
-.add__value:focus {
+.addType:focus,
+.addDescription:focus,
+.addValue:focus {
     outline: none;
     border: 1px solid #28B9B5;
 }
 
-.add__btn:focus { outline: none; }
+.addBtn:focus { outline: none; }
 
 /***** LISTS *****/
 .container {
     width: 75em;
     margin: 1em auto;
-}
+  }
 
 .income {
     float: left;
     width: 25em;
     margin-right: 1em;
+
 }
 
 .expenses {
@@ -189,8 +200,14 @@ h2 {
     margin-bottom: 1em;
 }
 
-.income__title { color: forestgreen; }
-.expenses__title { color: red; }
+.incomeTitle {
+  color: forestgreen;
+  text-align: center;
+}
+.expensesTitle {
+  color: red;
+  text-align: center;
+}
 
 .item {
     padding: 1em;
@@ -200,32 +217,31 @@ h2 {
 .item:first-child { border-top: 1px solid #e7e7e7; }
 .item:nth-child(even) { background-color: #f7f7f7; }
 
-.item__description {
+.itemDescription {
     float: left;
 }
 
-.item__value {
+.itemValue {
     float: left;
     transition: transform 0.3s;
 }
 
-.income .item__value,
-.income .item__delete--btn {
+.income .itemValue,
+.income .itemDeleteButton {
     color: #28B9B5;
 }
 
-.expenses .item__value,
-.expenses .item__percentage,
-.expenses .item__delete--btn {
+.expenses .itemValue,
+.expenses .itemDeleteButton {
     color: #FF5049;
 }
 
 
-.item__delete {
+.itemDelete {
     float: left;
 }
 
-.item__delete--btn {
+.itemDeleteButton {
     font-size: 1rem;
     background: none;
     border: none;
@@ -236,11 +252,11 @@ h2 {
     display: none;
 }
 
-.item__delete--btn:focus { outline: none; }
-.item__delete--btn:active { transform: translateY(.08em); }
+.itemDeleteButton:focus { outline: none; }
+.itemDeleteButton:active { transform: translateY(.08em); }
 
-.item:hover .item__delete--btn { display: block; }
-.item:hover .item__value { transform: translateX(-1em); }
+.item:hover .itemDeleteButton { display: block; }
+.item:hover .itemValue { transform: translateX(-1em); }
 
 
 
@@ -252,7 +268,7 @@ h2 {
 }
 
 
-.unpaid:hover .item__description { font-weight: 900; }
+.unpaid:hover .itemDescription { font-weight: 900; }
 
 .radioInline{
   display: inline-block;
